<resources>
    <string name="app_name">Note</string>

    <string name="login_password_hint">Password</string>
    <string name="login_login_hint">Login</string>
    <string name="login_login">Log in</string>
    <string name="login_error_login_in">Invalid login or password</string>
    <string name="login_create_account">Create account</string>

    <string name="create_account_fragment_label">Create account</string>
    <string name="create_account_login_hint">Login</string>
    <string name="create_account_password_hint">Password</string>
    <string name="create_account_confirm_password_hint">Confirm password</string>
    <string name="create_account_create_account">Create account</string>
    <string name="create_account_cancel">Cancel</string>
    <string name="create_account_invalid_login">Invalid login</string>
    <string name="create_account_invalid_password">Invalid password</string>
    <string name="create_account_error">Unable to create account</string>

    <string name="action_pick_type">Pick type</string>
    <string name="action_pick_type_text">Text</string>
    <string name="action_pick_type_password">Password</string>
    <string name="action_save">Save</string>
    <string name="action_info">Info</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="list_fragment_label">First Fragment</string>
    <string name="text_detail_fragment_label">Second Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="detail_title_hints">Title…</string>
    <string name="detail_content_hints">Content…</string>
    <string name="detail_save">Save</string>
    <string name="detail_cancel">Cancel</string>
</resources>