<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_password_constraint_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:textSize="@dimen/login_app_name_size"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_password_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/login_login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_login_hint"
            android:textSize="@dimen/login_login_size"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/login_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:textSize="@dimen/login_password_size"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/login_login_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:textSize="@dimen/login_login_size"
            android:layout_marginTop="@dimen/login_login_margin"
            app:layout_constraintTop_toBottomOf="@id/login_password_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/login_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_create_account"
            android:textSize="@dimen/login_create_account_size"
            android:background="@android:color/background_light"
            android:layout_marginTop="@dimen/login_create_account_margin"
            app:layout_constraintTop_toBottomOf="@id/login_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>