<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_password_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/create_account_login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_account_login_hint"
            android:textSize="@dimen/login_login_size"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/create_account_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_account_password_hint"
            android:textSize="@dimen/login_password_size"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/create_account_login_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/create_account_confirm_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_account_confirm_password_hint"
            android:textSize="@dimen/login_password_size"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/create_account_password_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/create_account_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_create_account"
            android:textSize="@dimen/login_login_size"
            android:layout_marginTop="@dimen/login_login_margin"
            app:layout_constraintTop_toBottomOf="@id/create_account_confirm_password_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/create_account_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_error_text_view_size"
            app:layout_constraintTop_toBottomOf="@id/create_account_create_account_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            tools:text="error message"/>

        <Button
            android:id="@+id/create_account_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_cancel"
            android:textSize="@dimen/login_create_account_size"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/login_create_account_margin"
            app:layout_constraintTop_toBottomOf="@id/create_account_error_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>